# qt_debug_tools

./: .gitignore  2026-06-09-mcu-debug-tool-design.md  CMakeLists.txt  README.md
src/app/: DeviceConfigDialog.cpp  DeviceConfigDialog.h  MainWindow.cpp  MainWindow.h  main.cpp
src/core/: ChannelHub.cpp  ChannelHub.h  DebugCore.cpp  DebugCore.h  PluginManager.cpp  PluginManager.h  RingBufferPool.cpp  RingBufferPool.h
src/plugins/control/raw_control/: RawControlPlugin.cpp  RawControlPlugin.h
src/plugins/control/slider_widget/: SliderWidgetPlugin.cpp  SliderWidgetPlugin.h  slider_widget.json
src/plugins/physical/serial_generic/: SerialGenericPlugin.cpp  SerialGenericPlugin.h  serial_generic.json
src/plugins/physical/usb_raw_linux/: UsbRawLinuxPlugin.cpp  UsbRawLinuxPlugin.h
src/plugins/physical/usb_raw_win/: UsbRawWinPlugin.cpp  UsbRawWinPlugin.h
src/plugins/protocol/can_frame/: CanFramePlugin.cpp  CanFramePlugin.h
src/plugins/protocol/raw_passthrough/: RawPassthroughPlugin.cpp  RawPassthroughPlugin.h
src/plugins/visual/gauge/: GaugePlugin.cpp  GaugePlugin.h
src/plugins/visual/raw_viewer/: RawViewerPlugin.cpp  RawViewerPlugin.h
src/plugins/visual/time_chart/: TimeChartPlugin.cpp  TimeChartPlugin.h
src/sdk/: DataFrame.cpp  DataFrame.h  IControlPlugin.h  IPhysicalPlugin.h  IProtocolPlugin.h  IVisualPlugin.h
